# gpt_struct_me_participants

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_new.txt  requirements_win.txt  result_out.txt  setup_venv.sh
experiments/: constants.py  evaluate.py  parse.py  prompt_selection.py  test.py  utils.py
gpt_struct_me.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/gemni/: bert_base_NER.ipynb  roberta_base.ipynb
resources/lusa_news/: lusa_1.ann  lusa_10.ann  lusa_100.ann  lusa_101.ann  lusa_102.ann  lusa_103.ann  lusa_104.ann  lusa_105.ann  lusa_106.ann  lusa_107.ann  lusa_108.ann  lusa_109.ann  lusa_11.ann  lusa_110.ann  lusa_111.ann  lusa_112.ann  lusa_113.ann  lusa_114.ann  lusa_115.ann  lusa_116.ann  lusa_117.ann  lusa_12.ann  lusa_13.ann  lusa_14.ann  lusa_15.ann  lusa_16.ann  lusa_17.ann  lusa_18.ann  lusa_19.ann  lusa_2.ann  lusa_20.ann  lusa_21.ann  lusa_22.ann  lusa_23.ann  lusa_24.ann  lusa_25.ann  lusa_26.ann  lusa_27.ann  lusa_28.ann  lusa_29.ann  (+77 more)
resources/lusa_news_other/: acl.conf  annotation.conf  kb_shortcuts.conf  tools.conf  visual.conf
resources/lusa_news_other/translated_lusa/: lusa_alignment.py  lusa_translate.py
resources/lusa_news_other/translated_lusa/en/: lusa_1.ann  lusa_1.txt  lusa_10.ann  lusa_10.txt  lusa_100.ann  lusa_100.txt  lusa_101.ann  lusa_101.txt  lusa_102.ann  lusa_102.txt  lusa_103.ann  lusa_103.txt  lusa_104.ann  lusa_104.txt  lusa_105.ann  lusa_105.txt  lusa_106.ann  lusa_106.txt  lusa_107.ann  lusa_107.txt  lusa_108.ann  lusa_108.txt  lusa_109.ann  lusa_109.txt  lusa_11.ann  lusa_11.txt  lusa_110.ann  lusa_110.txt  lusa_111.ann  lusa_111.txt  lusa_112.ann  lusa_112.txt  lusa_113.ann  lusa_113.txt  lusa_114.ann  lusa_114.txt  lusa_115.ann  lusa_115.txt  lusa_116.ann  lusa_116.txt  (+194 more)
resources/lusa_news_other/translated_lusa/es/: lusa_1.ann  (+274 more)
results/prompt_selection/portuguese/: predictions.json  results.csv  results.json  results.xlsx
results/test/portuguese/: predictions.json  results.csv  results.json
results/test/portuguese_bck/: results.csv  results.json
src/: evaluate.py  models.py  prompts.py  reader.py
(+961 files in other folders)
