[project]
name = "gpt-struct-me-participants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "annotated-types==0.7.0"
    ,"anyio==4.11.0"
    ,"beautifulsoup4==4.14.2"
    ,"boto3==1.41.2"
    ,"botocore==1.41.2"
    ,"cached-path==1.8.0"
    ,"cachetools==6.2.2"
    ,"certifi==2025.11.12"
    ,"charset-normalizer==3.4.4"
    ,"click==8.1.8"
    ,"colorama==0.4.6"
    ,"distro==1.9.0"
    ,"dotenv==0.9.9"
    ,"exceptiongroup==1.3.1"
    ,"filelock==3.19.1"
    ,"fire==0.7.1"
    ,"fsspec==2025.10.0"
    ,"google==3.0.0"
    ,"google-api-core==2.28.1"
    ,"google-auth==2.43.0"
    ,"google-cloud-core==2.5.0"
    ,"google-cloud-storage==2.19.0"
    ,"google-crc32c==1.7.1"
    ,"google-genai==1.47.0"
    ,"google-resumable-media==2.8.0"
    ,"googleapis-common-protos==1.72.0"
    ,"h11==0.16.0"
    ,"httpcore==1.0.9"
    ,"httpx==0.28.1"
    ,"huggingface-hub==0.36.0"
    ,"idna==3.11"
    ,"jiter==0.12.0"
    ,"jmespath==1.0.1"
    ,"joblib==1.5.2"
    ,"markdown-it-py==3.0.0"
    ,"mdurl==0.1.2"
    ,"networkx==3.2.1"
    ,"nltk==3.9.2"
    ,"numpy==2.0.2"
    ,"openai==2.8.1"
    ,"packaging==25.0"
    ,"pandas==2.3.3"
    ,"proto-plus==1.26.1"
    ,"protobuf==6.33.1"
    ,"pyasn1==0.6.1"
    ,"pyasn1-modules==0.4.2"
    ,"pydantic==2.12.4"
    ,"pydantic-core==2.41.5"
    ,"pygments==2.19.2"
    ,"python-dateutil==2.9.0.post0"
    ,"python-dotenv==1.2.1"
    ,"pytz==2025.2"
    ,"pyyaml==6.0.3"
    ,"regex==2025.11.3"
    ,"requests==2.32.5"
    ,"rich==13.9.4"
    ,"rsa==4.9.1"
    ,"s3transfer==0.15.0"
    ,"safetensors==0.7.0"
    ,"six==1.17.0"
    ,"sniffio==1.3.1"
    ,"soupsieve==2.8"
    ,"tenacity==9.1.2"
    ,"termcolor==3.1.0"
    ,"tieval==0.1.11"
    ,"tokenizers==0.22.1"
    ,"tqdm==4.67.1"
    ,"transformers==4.57.1"
    ,"typing-extensions==4.15.0"
    ,"typing-inspection==0.4.2"
    ,"tzdata==2025.2"
    ,"urllib3==1.26.20"
    ,"websockets==15.0.1"
    ,"xmltodict==1.0.2"
]
